{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 8,
  "lineage": "3a8ca248-2dac-030c-d05b-e303e1f2cfba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_KONG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017696294876:internet-gateway/igw-0bc7b6ce9986d2900",
            "id": "igw-0bc7b6ce9986d2900",
            "owner_id": "017696294876",
            "tags": {
              "Name": "Internet gateway KONG"
            },
            "tags_all": {
              "Name": "Internet gateway KONG"
            },
            "vpc_id": "vpc-06bc156d92f2d9c81"
          },
          "dependencies": [
            "aws_vpc.VPC_KONG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "Public_NACL_KONG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017696294876:network-acl/acl-0b7b6f2387b9f76ba",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "id": "acl-0b7b6f2387b9f76ba",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "017696294876",
            "subnet_ids": [
              "subnet-0570281b3990b1cec"
            ],
            "tags": {
              "Name": "Public NACL KONG"
            },
            "tags_all": {
              "Name": "Public NACL KONG"
            },
            "vpc_id": "vpc-06bc156d92f2d9c81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.Public_subnet_KONG",
            "aws_vpc.VPC_KONG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access_KONG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bc7b6ce9986d2900",
            "id": "r-rtb-0f7fd977d61b42fd41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7fd977d61b42fd4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW_KONG",
            "aws_route_table.Public_RT_KONG",
            "aws_vpc.VPC_KONG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT_KONG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017696294876:route-table/rtb-0f7fd977d61b42fd4",
            "id": "rtb-0f7fd977d61b42fd4",
            "owner_id": "017696294876",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public Route table KONG"
            },
            "tags_all": {
              "Name": "Public Route table KONG"
            },
            "vpc_id": "vpc-06bc156d92f2d9c81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_KONG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0255f6a35df2ff191",
            "route_table_id": "rtb-0f7fd977d61b42fd4",
            "subnet_id": "subnet-0570281b3990b1cec"
          },
          "dependencies": [
            "aws_route_table.Public_RT_KONG",
            "aws_subnet.Public_subnet_KONG",
            "aws_vpc.VPC_KONG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet_KONG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017696294876:subnet/subnet-0570281b3990b1cec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0570281b3990b1cec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "017696294876",
            "tags": {
              "Name": "Public subnet Kong"
            },
            "tags_all": {
              "Name": "Public subnet Kong"
            },
            "vpc_id": "vpc-06bc156d92f2d9c81"
          },
          "dependencies": [
            "aws_vpc.VPC_KONG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_KONG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017696294876:vpc/vpc-06bc156d92f2d9c81",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-044cc70c1225db33e",
            "default_route_table_id": "rtb-0dcccc4f06540fbe1",
            "default_security_group_id": "sg-0ce94af94c8a84c96",
            "dhcp_options_id": "dopt-d9a993a3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06bc156d92f2d9c81",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dcccc4f06540fbe1",
            "owner_id": "017696294876",
            "tags": {
              "Name": "VPC KONG"
            },
            "tags_all": {
              "Name": "VPC KONG"
            }
          }
        }
      ]
    }
  ]
}